--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello javascript...</h1>
+    <h1>Hello javascript hello ...</h1>
 </body>
 <script src="js/tut9.js">
 </script>
